fixed the wrapping early

--- a/homepage.css
+++ b/homepage.css
@@ -527,3 +527,7 @@ padding-bottom: 14px;
 }
 
 
+.container{
+	width: auto;
+}
+
